entity-registry/src/main/pegasus/com/datahub/test/invalid/InvalidSearchableFieldType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record InvalidSearchableFieldType {
  @Searchable = {
    "fieldName": "recordField",
    "indexSettings": [
      { "indexType": "KEYWORD" }
    ]
  }
  recordField: record TestRecord {
      testField: optional string
  }
}